--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,15 @@
     <string name="saturday">SAT</string>
     <string name="sunday">SUN</string>
     <string name="stremail">Email</string>
+    <string name="descimgver">Editar</string>
+    <string name="nombremasc">NOMBRE</string>
+    <string name="fechamasc">FECHA</string>
+    <string name="horamasc">HORA</string>
+    <string name="si">SI</string>
+    <string name="no">NO</string>
+    <string name="pagopreg">PAGO?</string>
+    <string name="enviopreg">ENVIO?</string>
+    <string name="agenciamasc">AGENCIA</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="action_settings">Settings</string>
